Archive2/7c/593f9816026719/output
main.cpp:3:13: error: initializer-string for array of chars is too long [-fpermissive]
 char s[3] = "Robert";
             ^
