Archive2/7c/593f9816026719/main.cpp
#include <stdio.h>

char s[3] = "Robert";
int main()
{
printf("%s",s);
}